implemented user service